# gdcp

./: HISTORY  LICENCE.txt  README.md
g4Example/: CMakeLists.txt  Main.cc
g4Example/NuSD/include/: NuSDAxisType.hh  NuSDDetConstruction.hh  NuSDDetectorBuilder.hh  NuSDDetectorBuilderMessenger.hh  NuSDGammaScntCompBuilder.hh  NuSDGammaScntSD.hh  NuSDGammaScntSDHit.hh  NuSDGrooveCompBuilderStore.hh  NuSDMaterialFactory.hh  NuSDMppcCompBuilder.hh  NuSDNeutronScntCompBuilder.hh  NuSDNeutronScntSD.hh  NuSDNeutronScntSDHit.hh  NuSDPhotoSensorType.hh  NuSDPmtROUnitBuilder.hh  NuSDPmtROUnitBuilderMessenger.hh  NuSDPmtROUnitPlacer.hh  NuSDROUnitBuilderFactory.hh  NuSDSiPMROUnitBuilder.hh  NuSDSiPMROUnitBuilderMessenger.hh  NuSDSiPMROUnitPlacer.hh  NuSDSimManager.hh  NuSDSimManagerMessenger.hh  NuSDStandartDetUnitPlacer.hh  NuSDVDetUnitCompBuilder.hh  NuSDVDetUnitPlacer.hh  NuSDVGrooveCompBuilder.hh  NuSDVROUnitCompBuilder.hh  NuSDVROUnitPlacer.hh
g4Example/NuSD/src/: NuSDDetConstruction.cc  NuSDDetectorBuilder.cc  NuSDDetectorBuilderMessenger.cc  NuSDGammaScntCompBuilder.cc  NuSDGammaScntSD.cc  NuSDGammaScntSDHit.cc  NuSDGrooveCompBuilderStore.cc  NuSDMaterialFactory.cc  NuSDMppcCompBuilder.cc  NuSDNeutronScntCompBuilder.cc  NuSDNeutronScntSD.cc  NuSDNeutronScntSDHit.cc  NuSDPhotonSD.cc  NuSDPhotonSDHit.cc  NuSDPmtROUnitBuilder.cc  NuSDPmtROUnitBuilderMessenger.cc  NuSDPmtROUnitPlacer.cc  NuSDROUnitBuilderFactory.cc  NuSDSiPMROUnitBuilder.cc  NuSDSiPMROUnitBuilderMessenger.cc  NuSDSiPMROUnitPlacer.cc  NuSDSimManager.cc  NuSDSimManagerMessenger.cc  NuSDStandartDetUnitPlacer.cc  NuSDVDetUnitCompBuilder.cc  NuSDVDetUnitPlacer.cc  NuSDVGrooveCompBuilder.cc  NuSDVROUnitCompBuilder.cc  NuSDVROUnitPlacer.cc
g4Example/gdcp/include/: BoxComponentBuilder.hh  BoxComponentBuilderMessenger.hh  DetectorDirector.hh  SmartComponent.hh  TrdComponentBuilder.hh  TrdComponentBuilderMessenger.hh  TubsComponentBuilder.hh  VComponentBuilder.hh  VMaterialFactory.hh
g4Example/gdcp/src/: BoxComponentBuilderMessenger.cc  GeometryManager.cc  TrdComponentBuilder.cc  VMultiComponentBuilder.cc
g4Example/include/: ActionInitialization.hh  PandaDetUnitBuilder.hh  PrimaryGeneratorAction.hh  SegmentedDetConstruction.hh  SolidDetUnitBuilder.hh  SolidGrooveCompBuilder.hh
g4Example/macros/: detectorBuilder.mac  initialize.mac  run.mac
g4Example/macros/boxComponent/: LightGuideBinderX.mac  LightGuideBinderY.mac  LightGuideBinderZ.mac  MppcBinderX.mac  MppcBinderY.mac  MppcBinderZ.mac  MppcX.mac  MppcY.mac  MppcZ.mac  PandaDetUnitBuilder.mac  SolidDetUnitBuilder.mac
g4Example/macros/matPropTable/: Air.mac  AluminizedMylar.mac  Cement.mac  CustomEJ-254.mac  CustomEJ-309.mac  EJ-200.mac  EJ-260.mac  EJ-335.mac  EJ-426.mac  Fep.mac  FluorinatedAcrylic.mac  Grease.mac  MppcX.mac  MppcY.mac  MppcZ.mac  Pmma.mac  PmtROUnitX.mac  PmtROUnitY.mac  PmtROUnitZ.mac  Polystyrene.mac  SiPMROUnitX.mac  SiPMROUnitY.mac  SiPMROUnitZ.mac
g4Example/macros/opticalSurface/: AluminizedMylar.mac  MppcX.mac  MppcY.mac  MppcZ.mac  PmtROUnitX.mac  PmtROUnitY.mac  PmtROUnitZ.mac  SiPMROUnitX.mac  SiPMROUnitY.mac  SiPMROUnitZ.mac
g4Example/macros/readout/: PmtROUnitX.mac  PmtROUnitY.mac  PmtROUnitZ.mac  SiPMROUnitX.mac  SiPMROUnitY.mac  SiPMROUnitZ.mac
g4Example/macros/trdComponent/: LightGuideX.mac  LightGuideY.mac  LightGuideZ.mac
g4Example/macros/tubsComponent/: PhotoCathodeBinderX.mac  PhotoCathodeBinderY.mac  PhotoCathodeBinderZ.mac  PhotoCathodeX.mac  PhotoCathodeY.mac  PhotoCathodeZ.mac
g4Example/macros/vis/: DetUnitCompColors.mac  PmtROUnitCompColors.mac  SiPMROUnitCompColors.mac  vis.mac
g4Example/materials/include/: AirMatBuilder.hh  AluminizedMylarMatBuilder.hh  CementMatBuilder.hh  (+12 more)
g4Example/src/: ActionInitialization.cc  PandaDetUnitBuilder.cc  PrimaryGeneratorAction.cc  SegmentedDetConstruction.cc  SolidDetUnitBuilder.cc  SolidGrooveCompBuilder.cc
(+44 files in other folders)
